tests/positive/pr115_compound_terminators.safe
package pr115_compound_terminators

   subtype count is integer (0 to 10)
   subtype tiny_count is integer (1 to 2)

   function adjust (input : count) returns count

      var current : count = input
      if current > 5
         current = 5
      else if current < 5
         current = 4

      for i in tiny_count
         if current < 5
            current = 5

      return current
