tests/negative/neg_array_concat_fixed_array.safe
package neg_array_concat_fixed_array

   subtype slot is integer (1 to 2)
   type window is array (slot) of integer

   function bad_concat returns integer
      var left : window = (1, 2)
      var right : window = (3, 4)
      var combined : window = left & right

      return combined (1)
